--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>507</title>
   </head>
   <body>
-    <iframe src='https://my.spline.design/507-a2600dc46d21c4b7e6b217b848169eb2/' frameborder='0' width='100%' height='100%'></iframe>  
+    <iframe src='https://my.spline.design/507-a2600dc46d21c4b7e6b217b848169eb2/' style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+    Your browser doesn't support iframes></iframe>  
   </body>
 </html>
