remove tailwind css leftovers

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>507</title>
   </head>
   <body>
-    <video autoPlay muted playsInline className="absolute object-center z-0 w-full h-full max-w-none object-cover">
+    <video autoPlay muted playsInline>
       <source src="/507Jungle4K.mov" type="video/mp4" />
       Your browser does not support the video tag.
     </video>
