fixed forgot embed in url

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <iframe
       style="pointer-events: none; position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"
-      src="https://youtu.be/V6K7o8QE_sY?autoplay=1&mute=1&controls=0">
+      src="https://youtu.be/embed/V6K7o8QE_sY?autoplay=1&mute=1&controls=0">
     </iframe>
-    
+      
     <!-- <video autoPlay muted playsInline style="pointer-events: none; position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
       <source src="https://youtu.be/V6K7o8QE_sY" type="video/mp4" />
       Your browser does not support the video tag.
