--- a/index.html
+++ b/index.html
@@ -3,18 +3,62 @@
 <html>
   <head>
     <title>507</title>
+    <style>
+/*       video {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 100%;
+        transform: translateX(calc((100% - 100vw) / 2));
+        transform: translateY(calc((100% - 100vh) / 2));
+        overflow:hidden;
+      } */
+/*       video {
+        transform: translate(-50%, -50%);
+        position: absolute;
+        min-width: 100%;
+        min-height: 100%;
+      } */
+      video {
+        height: 100%;
+        width: 100vw;
+        object-fit: cover;
+        position: absolute;
+        top:0;
+        left:0;
+        bottom:0;
+        right:0;
+        border:none;
+        margin:0;
+        padding:0;
+        overflow:hidden;
+      }
+    </style>
+
+<!--         <video autoPlay muted playsInline className="absolute object-center z-0 w-full h-full max-w-none object-cover">
+          <source src="/507Jungle4K.mov" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video> -->
+
   </head>
   <body>
-    <iframe
-      src="http://www.youtube.com/embed/V6K7o8QE_sY?autoplay=1&mute=1&controls=0&disablekb=1">
-    </iframe>
+<!--     <p>brev</p> -->
     
-    <!-- <video autoPlay muted playsInline style="pointer-events: none; position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
+<!--     <video autoPlay muted playsInline style="pointer-events: none; position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
       <source src="https://youtu.be/V6K7o8QE_sY" type="video/mp4" />
       Your browser does not support the video tag.
-    </video> -->
-    
-    <!-- <iframe src='https://my.spline.design/507-a2600dc46d21c4b7e6b217b848169eb2/' style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
-    Your browser doesn't support iframes></iframe>  -->
+    </video>
+     -->
+
+
+    <video autoPlay muted playsInline>
+      <source src="/public/507Jungle4K.mov" type="video/mp4" />
+      Your browser does not support the video tag.
+    </video>
+<!--     <iframe
+      src='https://my.spline.design/507-a2600dc46d21c4b7e6b217b848169eb2/'
+      style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden;">
+    Your browser doesn't support iframes></iframe> -->
   </body>
 </html>
