--- a/index.html
+++ b/index.html
@@ -3,28 +3,12 @@
 <html>
   <head>
     <title>507</title>
-    <style>
-      video {
-        height: 100%;
-        width: 100vw;
-        object-fit: cover;
-        position: absolute;
-        top:0;
-        left:0;
-        bottom:0;
-        right:0;
-        border:none;
-        margin:0;
-        padding:0;
-        overflow:hidden;
-      }
-    </style>
   </head>
   <body>
-    <p>brev</p>
+<!--     <p>brev</p> -->
 
-    <video autoPlay muted playsInline>
-      <source src="/public/507Jungle4K.mov" type="video/mp4" />
+    <video autoPlay muted playsInline style="height:100%; width:100vw; object-fit:cover; position:absolute; top:0; left:0; bottom:0; right:0; border:none; margin:0; padding:0; overflow:hidden;">
+      <source src="/public/507Jungle4K.mov"type="video/mp4" />
       Your browser does not support the video tag.
     </video>
 
