--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <title>507</title>
   </head>
-  <body>
+  <body style="background-color:black;">
 <!--     <p>brev</p> -->
 
     <video autoPlay muted playsInline style="height:100%; width:100vw; object-fit:cover; position:absolute; top:0; left:0; bottom:0; right:0; border:none; margin:0; padding:0; overflow:hidden;">
-      <source src="/public/507Jungle4K.mov"type="video/mp4" />
+      <source src="/videos/507Jungle4K.mov"type="video/mp4" />
       Your browser does not support the video tag.
     </video>
 
